--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1187,6 +1187,7 @@ select {
 }
 .portfolio-one .portfolio-grid {
     margin: 0 -9px -20px;
+    margin-bottom: 500px;
 }
 .single-portfolio {
     overflow: hidden;
